--- a/MoviesProject/app/src/main/res/layout/fragment_movie.xml
+++ b/MoviesProject/app/src/main/res/layout/fragment_movie.xml
@@ -21,11 +21,13 @@
 
     <TextView
         android:id="@+id/movie_description"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="275dp"
+        android:layout_height="111dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="8dp"
-        android:textAppearance="?attr/textAppearanceListItem"
+        android:layout_marginTop="4dp"
+        android:textSize="15sp"
+        android:ellipsize="end"
+        android:maxLines="6"
         app:layout_constraintStart_toEndOf="@+id/movie_poster"
         app:layout_constraintTop_toBottomOf="@+id/movie_title" />
 
@@ -34,7 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="8dp"
         android:fontFamily="sans-serif-black"
         android:textAppearance="?attr/textAppearanceListItem"
         app:layout_constraintStart_toEndOf="@+id/movie_poster"
