--- a/MoviesProject/app/src/main/res/layout/fragment_movie.xml
+++ b/MoviesProject/app/src/main/res/layout/fragment_movie.xml
@@ -17,7 +17,8 @@
         android:contentDescription="@string/todo"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/ic_menu_gallery" />
+        app:srcCompat="@android:drawable/ic_menu_gallery"
+        tools:ignore="ImageContrastCheck" />
 
     <TextView
         android:id="@+id/movie_description"
