--- a/Unit-5-Lab/app/src/main/res/layout/activity_detail.xml
+++ b/Unit-5-Lab/app/src/main/res/layout/activity_detail.xml
@@ -5,8 +5,6 @@
     android:id="@+id/detailLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/grey"
-
     tools:context=".DetailActivity">
 
     <ImageView
@@ -26,8 +24,8 @@
         android:layout_marginTop="5dp"
         android:layout_marginEnd="10dp"
         android:text="Title"
-        android:fontFamily="sans-serif-black"
-        android:textColor="@color/white"
+        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
+        android:textColor="#000000"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -41,9 +39,8 @@
         android:layout_marginTop="5dp"
         android:layout_marginEnd="10dp"
         android:text="Byline"
-        android:fontFamily="sans-serif"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
-        android:textColor="@color/white"
+        android:textColor="#000000"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -56,10 +53,9 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="10dp"
-        android:fontFamily="serif"
         android:text="Abstract"
         android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
-        android:textColor="@color/white"
+        android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/mediaByline" />
